tweaked small layout issues

--- a/familysleep/app/styles/main.css
+++ b/familysleep/app/styles/main.css
@@ -7849,7 +7849,7 @@ button.how-sleep-button:focus, button.how-sleep-button:active, button.how-sleep-
   position: absolute;
   background: #fff;
   border: 2px solid #000;
-  top: 20px;
+  top: 10px;
   padding: 10px;
   padding-bottom: 0;
   font-size: 17px;
@@ -7874,7 +7874,7 @@ button.how-sleep-button:focus, button.how-sleep-button:active, button.how-sleep-
 /* line 86, partials/_recorder.scss */
 .speech-bubble:after, .speech-bubble:before {
   right: 0;
-  top: 10px;
+  top: 20px;
   border: solid transparent;
   content: " ";
   height: 0;
@@ -8715,7 +8715,7 @@ p.sdv-names {
 #aboutus-contents {
   padding-left: 40px;
   padding-right: 40px;
-  padding-top: 130px;
+  padding-top: 120px;
 }
 
 /* line 27, partials/about.scss */
