--- a/familysleep/app/styles/partials/about.css
+++ b/familysleep/app/styles/partials/about.css
@@ -23,7 +23,7 @@
 #aboutus-contents {
   padding-left: 40px;
   padding-right: 40px;
-  padding-top: 130px;
+  padding-top: 120px;
 }
 
 /* line 27, about.scss */
